# Project-Aegis

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: graph.py  state.py
agent/nodes/: clause_drafting.py  compliance_check.py  error_handler.py  ingest.py  parse.py  policy_retrieval.py  report_generation.py  web_search.py
agent/prompts/: clause_drafting.yaml  compliance_check.yaml
api/: main.py
config/: logging.py  settings.py
db/: models.py  session.py
infra/: docker-compose.yml
scripts/: ingest_policies.py  test_graph.py
services/: document_parser.py  vector_store.py
tests/fixtures/: violation_legend.md
tests/fixtures/contracts/: contract_compliant.md  contract_non_compliant.md
tests/fixtures/policies/: company_policy.md
