[project]
name = "project-aegis"
version = "0.1.0"
description = "Autonomous Contract Compliance Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # LangChain / LangGraph
    "langgraph>=1.0.10",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-community>=0.4.1",

    # Database
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",

    # Task Queue
    "celery>=5.6.2",
    "redis>=7.2.1",

    # Document Parsing
    "pypdf>=6.7.5",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.9",

    # Vector Store
    "chromadb>=1.5.2",

    # Utilities
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
